2008-08-12  Piotr Eljasiak  <epiotr@use.pl>

	* src/filter.cc:
	Fix for mismatched case-sesitive/insensitive file selection (regex mode)

2008-08-11  Piotr Eljasiak  <epiotr@use.pl>

	* libgcmd/libgcmd-widget-factory.c:
	* libgcmd/libgcmd-widget-factory.h:
	* src/gnome-cmd-options-dialog.cc:
	Replaced obsoleted code for GnomeFontPicker with GtkFontButton

2008-08-09  Piotr Eljasiak  <epiotr@use.pl>

	* configure.in:
	* data/gnome-commander.spec.in:
	* po/POTFILES.in:
	* src/Makefile.am:
	* src/gnome-cmd-advrename-dialog.cc:
	* src/gnome-cmd-advrename-lexer.ll:
	* src/gnome-cmd-file-props-dialog.cc:
	* src/tags/Makefile.am:
	* src/tags/gnome-cmd-tags-poppler.cc:
	* src/tags/gnome-cmd-tags-poppler.h:
	* src/tags/gnome-cmd-tags.cc:
	* src/tags/gnome-cmd-tags.h:
	Added support for PDF metatags

	* src/tags/gnome-cmd-tags-poppler.cc:
	Do not search metatags for non-pdf documents

2008-08-05  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-selector.cc:
	Kill obsoleted code

	* src/filter.cc:
	* src/filter.h:
	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-data.h:
	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-options-dialog.cc:
	* src/gnome-cmd-search-dialog.cc:
	Convert Filter struct into C++ class

2008-08-04  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-rename-dialog.cc:
	SHIFT+F6: select file name without ext. This fixes problem #536446

	* src/gnome-cmd-advrename-dialog.cc:
	* src/gnome-cmd-con.cc:
	* src/gnome-cmd-con.h:
	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-file-selector.cc:
	* src/history.cc:
	* src/history.h:
	Convert History struct to C++ class

2008-08-01  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-dir.cc:
	* src/gnome-cmd-dir-pool.cc:
	* src/gnome-cmd-dir-pool.h:
	Convert GnomeCmdDirPool into fully fledged C++ class

	* src/Makefile.am:
	* src/gnome-cmd-con.cc:
	* src/gnome-cmd-con.h:
	* src/gnome-cmd-dir-pool.cc:
	* src/gnome-cmd-dir-pool.h:
	Removal of GnomeCmdDirPool class, as it is not completed and functional
